tests/ui/once_name_reserved_prefix.stderr
error: cache names beginning with `__cached` are reserved for macro-generated bindings and cannot be used as a `name` value
 --> tests/ui/once_name_reserved_prefix.rs:6:4
  |
6 | fn f() -> i32 {
  |    ^
